added folder preview

--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ body {
 	font-family: sans-serif;
 	color: white;
 }
-#main {
+.main {
 	height: 100%;
 	width: 100%;
 	background-color: #FFF;
 }
-#main div {
+.main div {
 	overflow: auto;
 	
 }
@@ -20,7 +20,6 @@ body {
 }
 #image {
 	height: 100% !important;
-	background-image: url('login_bg.jpg');
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: 50% 50%
@@ -58,7 +57,12 @@ body {
 	padding: 5px !important;
 }
 .browser li {
-	padding-bottom: 5px !important;
+	
+	padding: 5px !important;
+	border: 1px solid #F0F0F0;
+}
+.browser li>a {
+	height: 64px;
 }
 .thumbnail-container {
 	white-space: normal;
@@ -93,4 +97,18 @@ body {
 	cursor: pointer;
 	z-index:20;
 	opacity:0.2;
+}
+.node-container {
+	display: inline-block;
+	overflow:visible !important;
+}
+.preview {
+	width: 64px;
+	height: 64px;
+	background-image:url('throbber.gif');
+	background-repeat:no-repeat;
+	background-position:center; 
+	display: inline-block;
+	right: 26px;
+	position: absolute;
 }
